* Add ``NIKOLA_SHOW_TRACEBACKS`` environment variable that shows
  full tracebacks instead of one-line summaries
* Use ``PRETTY_URLS`` by default on all sites (Issue #1838)
* Feed link generation is completely refactored (Issue #2844)
* Let path handlers return absolute URLs (Issue #2876)
* Add ``BLOG_EMAIL`` to global context to make it available for
  templates (Issue #2968)

Bugfixes
--------

* Handle '/' and other absolute paths better in POSTS / PAGES / TRANSLATIONS
  (Issue #2982)
* Fix loading non-default languages
* Support KaTeX for reST display math (Issue #2888)
* Use npm for asset management instead of bower, which was deprecated
  (Issue #2790)
* Properly handle ``SHOW_INDEX_PAGE_NAVIGATION`` with Jinja templates
  (Issue #2960)
* Prevent crashes due to Windows-specific code in ``auto`` running on
  all platforms (Issue #2940)
* Don’t run hyphenate on ``<pre>`` blocks (Issue #2939)
* Make errors in reST display in logs again
* Unquote paths given to ``link://`` magic URLs (Issue #2934)
* Specify UTF-8 input encoding for Mako as default (Issue #2930)
* Don't trigger rebuilds in auto mode for files it's safe to ignore
  (Issue #2906)
* Fix padding for Jupyter code blocks (Issue #2927)
* Apply ``SCHEDULE_ALL`` to posts only (Issue #2921)
* Restore version number to Bootswatch URLs (Issue #2916)
* Do not strip trailing slash in ``slug`` magic links
* Ignore empty tags in HTML metadata reader (Issue #2890)
* Do not remove doctype if ``add_header_permalinks`` or
  ``deduplicate_ids`` are used
* Handle empty slug metadata (Issue #2887)
* Fix crash when compiling empty ``.html`` posts (Issue #2851)
* Make failures to get source commit hash non-fatal in
  ``github_deploy`` (Issue #2847)
* Less cryptic error when guessing format from extension in ``new_post``
  fails
* Use Jupyter name more consistently in docs
* Support CODE_COLOR_SCHEME in Jupyter notebooks (Issue #2093)
* Language was not passed to title and link generation for page indexes